# dnbootstrap

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fontconfig.tgz  layout-default.json
app/src/main/cpp/: CMakeLists.txt  dnbootstrap.c
app/src/main/java/git/artdeell/dnbootstrap/: AssetsCheckActivity.java  ControlEditorActivity.java  DotnetStarter.java  MainActivity.java  ManageDataActivity.java  NativeSurfaceListener.java  SymlinkUtil.java  ThrowableUtil.java  Utils.java
app/src/main/java/git/artdeell/dnbootstrap/assets/: AppDirs.java  AssetsExtractor.java
app/src/main/java/git/artdeell/dnbootstrap/glfw/: ClipboardStringProvider.java  CursorImplementor.java  GLFW.java  GLFWCursor.java  GLFWCursorView.java  GrabListener.java  KeyCodes.java  MouseCodes.java
app/src/main/java/git/artdeell/dnbootstrap/input/: ControlButton.java  ControlButtonDrag.java  ControlJoystick.java  ControlLayout.java  ControlLayoutOriginal.java  InputConfiguration.java  Joystick.java  LayoutTouchConsumer.java  LoadableButtonLayout.java  Recreatable.java  SoftInputCallback.java  TouchCharInput.java
app/src/main/java/git/artdeell/dnbootstrap/io/: FolderProvider.java  IOUtil.java  ReadCountInputStream.java
app/src/main/java/git/artdeell/dnbootstrap/utils/: InsetBackground.java  InsetUtils.java  SymlinkUtil.java  ThrowableUtil.java  Utils.java
app/src/main/java/git/artdeell/dnbootstrap_test/: AssetsCheckActivity.java  DotnetStarter.java  MainActivity.java  ManageDataActivity.java  NativeSurfaceListener.java
app/src/main/java/git/artdeell/dnbootstrap_test/assets/: AppDirs.java  AssetsExtractor.java
app/src/main/java/git/artdeell/dnbootstrap_test/glfw/: ClipboardStringProvider.java  CursorImplementor.java  GLFW.java  GLFWCursor.java  GLFWCursorView.java  GrabListener.java  KeyCodes.java  MouseCodes.java
app/src/main/java/git/artdeell/dnbootstrap_test/input/: ControlButton.java  ControlButtonDrag.java  ControlJoystick.java  ControlLayout.java  ControlLayoutOriginal.java  LayoutTouchConsumer.java  LoadableButtonLayout.java  Recreatable.java  SoftInputCallback.java  TouchCharInput.java
app/src/main/java/git/artdeell/dnbootstrap_test/io/: FolderProvider.java  IOUtil.java  ReadCountInputStream.java
app/src/main/java/git/artdeell/dnbootstrap_test/utils/: Utils.java  (+4 more)
app/src/main/res/drawable/: backpack.xml  btn_icon_map.xml  button_style.xml  grid_select_material.xml  keyboard.xml  map.xml  mouse_left_button.xml  mouse_right_button.xml  select_empty_material.xml  stats.xml
app/src/main/res/layout/: activity_assets_check.xml  activity_main.xml  activity_manage_data.xml  controls_editor.xml  dialog_button_setup.xml  dialog_editor_base.xml  dialog_editor_input_config.xml  dialog_global_settings.xml  dialog_joystick_setup.xml  key_list_item.xml  spinner_asset_item.xml
app/src/main/res/values/: attr.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+36 files in other folders)
